ECL 9.1.0:
==========

* Streams:

 - ECL has now a new and more easily extensible implementation of streams, based
   on C structures with a method dispatch table. Apart from code reuse and better
   maintainability, this allows a more sensible design of read/write-sequence.

 - *STANDARD-INPUT*, *{STANDARD,ERROR,TRACE}-OUTPUT* are no longer synonyms to
   *TERMINAL-IO* but directly the input or output streams associated to stdin,
   stdout and stderr.

 - Internally, ECL allows to work with POSIX file descriptors directly, without
   using C streams.

 - POSIX files and C streams now support different external formats. ECL
   understands right now :UTF-8, :UCS-2 (bigendian), :UCS-4 (bigendian),
   :LATIN-1 and :ISO-8859-1. If built _without_ support for Unicode, only the
   last two are available.

 - Readtables now include entries for extended characters.

 - When a string is read, if the characters are base-char, the string is read
   as a base-string.

* Bugs fixed:

 - (FLOOR X X), (CEILING X X), etc, might return a second value which is a
   signed zero if X is a float with a negative sign.

 - (SXHASH -0.0) != (SXHASH 0.0)

 - In DEFCLASS, the :type of slots was ignored.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***