@@ -71,11 +71,9 @@
 		    (or (eq slot-names 'T)
 			(member slot-name slot-names))
 		    (not (slot-boundp instance slot-name)))
-	   (let ((initform (slot-definition-initform slotd)))
-	     (unless (eq initform '+INITFORM-UNSUPPLIED+)
-	       (when (functionp initform)
-		 (setq initform (funcall initform)))
-	       (setf (slot-value instance slot-name) initform)))))
+	   (let ((initfun (slot-definition-initfunction slotd)))
+	     (when initfun
+	       (setf (slot-value instance slot-name) (funcall initfun))))))
 	)))
   instance)
 
@@ -131,7 +129,7 @@
 		(eq supplied-value 'si::failed))
 	(when (eq supplied-value '+initform-unsupplied+)
 	  (remf initargs initarg))
-	(setf value (if (functionp value) (funcall value) value)
+	(setf value (funcall value)
 	      initargs (append initargs (list initarg value))))))
   initargs)
 
@@ -365,8 +363,11 @@ because it contains a reference to the undefined class~%  ~A"
 	     (setf (slot-definition-initargs new-slotd)
 		   (union (slot-definition-initargs new-slotd)
 			  (slot-definition-initargs old-slotd)))
-	     (when (eq (slot-definition-initform new-slotd) '+INITFORM-UNSUPPLIED+)
-	       (setf (slot-definition-initform new-slotd) (slot-definition-initform old-slotd)))
+	     (unless (slot-definition-initfunction new-slotd)
+	       (setf (slot-definition-initform new-slotd)
+		     (slot-definition-initform old-slotd)
+		     (slot-definition-initfunction new-slotd)
+		     (slot-definition-initfunction old-slotd)))
 	     (setf (slot-definition-readers new-slotd)
 		   (union (slot-definition-readers new-slotd)
 			  (slot-definition-readers old-slotd))
